force-app/poc/default/objects/Inspection_Item_Limit__c/Inspection_Item_Limit__c.object-meta.xml
<CustomObject>
    <description>limit or restriction to be applied to an Inspection Item.
These are default values and will be copied to the Site Item when this record is created</description>
    <label>Inspection Item Limit</label>
    <nameField>
        <displayFormat>IL-{0000}</displayFormat>
        <label>Item Limit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inspection Item Limits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>