force-app/poc/default/objects/Inspection_Item_Limit__c/fields/Length__c.field-meta.xml
<CustomField>
    <fullName>Length__c</fullName>
    <description>Min or Max length of s String</description>
    <label>Length</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>