force-app/poc/default/objects/Inspection_Item_Limit__c/fields/Mandatory__c.field-meta.xml
<CustomField>
    <fullName>Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Can be checked to make a field mandatory. Unchecked or this limit does not exist, then value is not mandatory</description>
    <label>Mandatory</label>
    <type>Checkbox</type>
</CustomField>