force-app/poc/default/objects/Inspection_Item_Limit__c/fields/Threshold__c.field-meta.xml
<CustomField>
    <fullName>Threshold__c</fullName>
    <label>Threshold</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>