force-app/poc/default/objects/Inspection_Item_Limit__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The Type of this Limit</description>
    <inlineHelpText>The Type of this Limit</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Item_Limit_Type</valueSetName>
    </valueSet>
</CustomField>