force-app/poc/default/objects/Inspection_Item_Limit__c/recordTypes/Length.recordType-meta.xml
<RecordType>
    <fullName>Length</fullName>
    <active>true</active>
    <label>Length</label>
</RecordType>