force-app/poc/default/objects/Inspection_Item_Limit__c/recordTypes/Mandatory.recordType-meta.xml
<RecordType>
    <fullName>Mandatory</fullName>
    <active>true</active>
    <label>Mandatory</label>
</RecordType>