force-app/poc/default/objects/Inspection_Item_Limit__c/recordTypes/Threshold.recordType-meta.xml
<RecordType>
    <fullName>Threshold</fullName>
    <active>true</active>
    <label>Threshold</label>
</RecordType>